# price-tracker-bot

./: .dockerignore  .env.example  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  babel.cfg  docker-compose.override.example.yml  docker-compose.yml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  docker-build.yml  release.yml  security.yml
docs/: architecture.md  i18n.md  notifications.md  observability.md  operations.md  plugins.md  scrapers.md
docs/grafana/: price-tracker-dashboard.json
plugins/: README.md
scripts/: audit_english.sh  i18n.sh
src/price_tracker/: __init__.py  config.py  main.py
src/price_tracker/bot/: decorators.py  keyboards.py  messages.py
src/price_tracker/bot/handlers/: __init__.py  _helpers.py  auth.py  debug.py  history.py  monitoring.py  product.py  product_io.py  product_list.py  settings.py  text_input.py
src/price_tracker/bot/handlers/callbacks/: __init__.py  _actions.py  _admin.py  _menu.py  _product.py
src/price_tracker/core/: alert.py  currency.py  exceptions.py  health.py  http_client.py  outlier.py  registry.py  retry_policy.py  scheduler.py  scraper_base.py  url_utils.py
src/price_tracker/db/: __init__.py  migrator.py  models.py  repository.py
src/price_tracker/db/migrations/: 001_initial.sql  002_add_threshold.sql  003_add_user_info.sql  004_add_currency.sql  005_add_pending_alert.sql  006_add_seller_pref.sql  007_add_check_interval.sql  008_add_scraper_health.sql  009_add_notification_prefs.sql  010_add_digest_queue.sql  011_dedup_global_notification_prefs.sql  012_add_last_error.sql
src/price_tracker/locale/en/LC_MESSAGES/: messages.mo  messages.po
src/price_tracker/locale/it_IT/LC_MESSAGES/: messages.mo  messages.po
src/price_tracker/notifier/: digest.py  preferences.py  telegram.py
src/price_tracker/observability/: __init__.py  logging.py  metrics.py
src/price_tracker/scrapers/: aliexpress.py  amazon.py  apple_store.py  bestbuy.py  ebay.py  etsy.py  generic.py  google_store.py  mediamarkt.py  newegg.py  nove25.py  otto.py  playwright_fallback.py  shopify.py  target.py  walmart.py  wayfair.py  zalando.py
tests/: conftest.py
tests/fixtures/aliexpress/: sample_dom_only.html  sample_product.html
tests/fixtures/amazon/: sample_product.html
tests/fixtures/apple_store/: sample_apple_store_fallback.html  sample_product.html
tests/fixtures/bestbuy/: sample_product.html
tests/fixtures/ebay/: sample_product.html
tests/fixtures/etsy/: sample_etsy_fallback.html  sample_product.html
tests/fixtures/generic/: sample_heuristic.html  sample_jsonld.html  sample_microdata.html  sample_opengraph.html  sample_rdfa.html
tests/fixtures/google_store/: sample_google_store_fallback.html  sample_product.html
tests/fixtures/mediamarkt/: sample_mediamarkt_fallback.html  sample_product.html
tests/fixtures/newegg/: sample_product.html
tests/fixtures/nove25/: sample_itemprop_only.html  sample_no_jsonld.html  sample_product.html
tests/fixtures/otto/: sample_otto_fallback.html  sample_product.html
tests/fixtures/shopify/: sample_product.html
tests/fixtures/walmart/: sample_product.html  sample_walmart_fallback.html
tests/fixtures/wayfair/: sample_product.html
tests/fixtures/zalando/: sample_product.html  sample_zalando_fallback.html
tests/i18n/: conftest.py  test_locale.py
tests/integration/: conftest.py  test_handler_import_smoke.py  test_health_pipeline_integration.py  test_metrics_endpoint.py  test_migration_flow.py  test_notification_flow.py  test_quarantine_flow.py  test_repository_handler_contract.py  test_scheduler.py  test_startup_postinit.py
tests/unit/: test_alert.py  test_callback_id_parsing.py  test_callback_ownership.py  test_chart_offload.py  test_config.py  test_currency.py  test_debug_handlers.py  test_digest.py  test_digest_flush.py  test_etld_extraction.py  test_exceptions.py  test_first_run_bootstrap.py  test_health.py  test_http_client.py  test_logging.py  test_main_wiring.py  test_metrics.py  test_migrator.py  test_no_stale_imports.py  test_outlier.py  test_preferences.py  test_product_add_block.py  test_product_add_ssrf.py  test_product_list_helpers.py  test_registry.py  test_repository.py  test_retry_policy.py  test_scraper_base.py  test_set_interval.py  test_settings_auth_contract.py  test_settings_handlers.py  test_smoke.py  test_telegram_notifier.py  test_text_input_admin_interval.py  test_url_utils.py
tests/unit/scrapers/: test_aliexpress.py  test_amazon.py  test_amazon_block_events.py  test_apple_store.py  test_availability.py  test_bestbuy.py  test_curl_cffi_fallback_contract.py  test_ebay.py  test_etsy.py  test_generic.py  test_generic_shopify_block.py  test_google_store.py  test_jsonld_graph_unwrap.py  test_jsonld_offer_selection.py  test_mediamarkt.py  test_name_harvest.py  test_newegg.py  test_nove25.py  test_otto.py  test_playwright_fallback.py  test_scrapling_fallback_contract.py  test_shopify.py  test_shopify_redirect.py  test_split_span_fallback.py  test_target.py  test_walmart.py  test_wayfair.py  test_zalando.py  test_zero_price_guard.py
