[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "price-tracker"
version = "0.1.0-dev"
description = "Self-hosted Telegram bot for multi-site price tracking"
authors = [{name = "SVM23-B"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "python-telegram-bot[job-queue]>=21.0",
    "httpx>=0.27.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.0.0",
    "aiosqlite>=0.20.0",
    "python-dotenv>=1.0.0",
    "matplotlib>=3.8.0",
    "curl_cffi>=0.7.0",
    "scrapling>=0.2.0",
    "browserforge>=1.0.0",
    "tenacity>=8.5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.1",
    "respx>=0.21",
    "ruff>=0.5",
    "mypy>=1.10",
    "pre-commit>=3.7",
]

[project.entry-points."price_tracker.scrapers"]
# built-in scrapers register themselves via dir scan, but pip installs can use this group too

[tool.hatch.build.targets.wheel]
packages = ["src/price_tracker"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E", "W", "F",       # pycodestyle + pyflakes
    "I",                 # isort
    "B",                 # bugbear
    "BLE",               # blind-except — BLE001 enforced (no broad except Exception)
    "C4",                # comprehensions
    "PT",                # pytest style
    "SIM",               # simplify
    "UP",                # pyupgrade
    "TCH",               # type-checking imports
]
ignore = []

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["BLE001"]   # tests may catch broad exceptions to assert raised types
"src/price_tracker/notifier/telegram.py" = ["BLE001"]

[tool.mypy]
strict = true
python_version = "3.11"
files = ["src/price_tracker"]
plugins = []

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v --strict-markers --cov=src/price_tracker --cov-report=term-missing"
markers = [
    "e2e: end-to-end tests hitting real services (skipped in CI default)",
    "slow: slow tests (>1s)",
]
